--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
 
 <body>
   <main>
-    <div class="card">
+    <article class="card">
       <div class="card__img">
-        <img src="images/image-qr-code.png" alt="qr-code">
+        <img src="images/image-qr-code.png" alt="QR code linking to Frontend Mentor challenges">
       </div>
       <div class="card__body">
-        <h2>
+        <h1>
           Improve your front-end skills by building projects
-        </h2>
+        </h1>
         <p>
           Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
         </p>
       </div>
-    </div>
+    </article>
   </main>
 
 
